bin/testsuite/tests/compiler/src/errors/compiler720.swg
#global testerror "Err0215"
#test
{
    var ptr: *void
    var c    = ptr[0]
}
